<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount">

    <LinearLayout
        android:id="@+id/layout_create_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingTop="60dp"
        android:paddingEnd="30dp">

        <LinearLayout
            android:layout_width="210dp"
            android:layout_height="56dp"
            android:layout_gravity="start|left"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="46dp"
                android:layout_height="42dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:maxWidth="30dp"
                app:srcCompat="@drawable/anchor_gaswatcher" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:gravity="start"
                android:paddingStart="5dp"
                android:text="@string/app_name"
                android:textColor="#4A4F6A"
                android:textSize="26sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/create_account"
            android:textColor="@color/gw_secondary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_create_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_login"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_create_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_password"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_create_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/create_my_account"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/load_connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/gw_zero"
            android:gravity="center_vertical|end"
            android:text="@string/back_to_connection"
            android:textColor="@color/gw_secondary"
            android:textSize="16dp" />
    </LinearLayout>
</FrameLayout>