<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paper_boats"
    android:backgroundTint="@color/gw_mid"
    android:backgroundTintMode="src_over"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frame_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout_connect"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingTop="100dp"
        android:paddingEnd="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:foregroundGravity="left"
                app:srcCompat="@drawable/anchor_gaswatcher" />

            <TextView
                android:id="@+id/title_connect"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/app_name"
                android:textSize="32dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_error_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="#E1B9B9"
            android:padding="5dp"
            android:textColor="#870808"
            android:textSize="16dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/gw_secondary"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/gw_secondary"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/gw_default"
            android:backgroundTint="#FFFFFF"
            android:text="@string/connection"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/load_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/gw_zero"
            android:gravity="right|center_vertical"
            android:text="@string/create_account"
            android:textColor="@color/gw_zeroText"
            android:textSize="16dp"
            app:iconTint="@color/gw_zeroText" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>