<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gw_backwatcher"
    android:outlineAmbientShadowColor="@color/gw_zero"
    android:outlineSpotShadowColor="@color/gw_zero"
    tools:context=".WatcherActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:background="@color/gw_default"
            app:cardBackgroundColor="@color/gw_default"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_choose_harbor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/choose_harbor"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spin_harbor"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_margin="15dp"
                    android:layout_marginBottom="0dp"
                    android:background="@color/cardview_light_background"
                    android:backgroundTint="#FFFFFF" />

                <Button
                    android:id="@+id/btn_my_position"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="215dp"
                    android:layout_height="37dp"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginEnd="15dp"
                    android:background="#C2C4D1"
                    android:foregroundGravity="right"
                    android:gravity="right"
                    android:paddingRight="0dp"
                    android:text="@string/my_position"
                    android:textColor="#CDB9A3"
                    android:textSize="14dp"
                    android:theme="@style/Theme.GasWatcher"
                    app:icon="@drawable/ic_earth"
                    app:iconGravity="start"
                    app:iconPadding="1dp"
                    app:iconSize="25dp"
                    app:iconTint="#CDB9A3" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button"
            android:layout_width="217dp"
            android:layout_height="37dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginEnd="15dp"
            android:background="@color/gw_zero"
            android:foregroundGravity="right"
            android:gravity="right"
            android:paddingRight="0dp"
            android:text="@string/add_harbor"
            android:textColor="@color/gw_secondary"
            android:textSize="16dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            app:cardBackgroundColor="@color/gw_secondary"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:minWidth="30dp"
                    android:paddingStart="10dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    app:srcCompat="@drawable/lighthouse" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_position"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        android:background="@color/gw_secondary"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/destination_harbor"
                        android:textColor="#FFFFFF"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/tv_my_position"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="15dp"
                        android:gravity="left|center_vertical"
                        android:textColor="#FFFFFF" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/get_harbor"
            android:textSize="18dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_harbor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="#FFFFFF"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingEnd="10dp"
            android:scrollbarThumbHorizontal="@color/gw_default"
            android:scrollbars="vertical"
            android:verticalScrollbarPosition="right" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>